--- a/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Container_Entities.adoc
@@ -58,7 +58,7 @@ The mapping will show in the table on the *Map Tags* tab.
 .. Select the provider to refresh.
 .. Click  image:1847.png[] (*Configuration*), and then  image:2003.png[] (*Refresh Items and Relationships*).
 
-The container label will display on the entity's summary page under *Smart Management* under *Company Tags* as `<Category> : <value>`.
+The label will display on the entity's summary page under *Smart Management* under *Company Tags* as `<Category> : <value>`.
 
 image:OCP-autotagged.png[]
 
