--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -17,18 +17,17 @@ include::common/attributes/cfme.adoc[]
 :leveloffset: 1
 include::topics/Infrastructure_Providers.adoc[]
 
-
 :leveloffset: 1
 include::topics/Configuration_Management_Providers.adoc[]
-
 
 :leveloffset: 1
 include::topics/Cloud_Providers.adoc[]
 
-
 :leveloffset: 1
 include::topics/Networking_Providers.adoc[]
 
+:leveloffset: 1
+include::topics/Middleware_Providers.adoc[]
 
 :leveloffset: 1
 include::topics/Containers_Providers.adoc[]
