added note about unsupported chargeback rates for containers

--- a/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Chargeback_Rates.adoc
@@ -56,7 +56,7 @@ In a scenario where 16 CPUs are used in a day with the chargeback rate set at on
 [[cpu-used-cost]]
 ==== CPU Used Cost
 
-The CPU Used Cost is defined as the average CPU used in MHz over the selected rate interval (hour, day, week, month).
+The CPU Used Cost is defined as the average CPU used in MHz over the selected rate interval (hour, day, week, month). CPU Used Cost is not supported for containers providers.
 
 .CPU Used Cost
 ====
@@ -105,3 +105,13 @@ In a scenario where 250 GB are used in a day with the chargeback rate set at $0.
 * 250 GB * $0.10 (per GB per day) = $25 Storage Used Cost
 ====
 
+[NOTE]
+====
+The following chargeback rates are not supported for containers providers: 
+
+* Allocated CPU count
+* Used CPU
+* Used disk I/O
+* Allocated memory
+
+====
