--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -10,7 +10,7 @@
 ==== Configuring Chargeback for Compute
 
 Use *Compute* to assign a compute chargeback rate.
-You can assign chargeback rates to *The Enterprise*, *Selected Cloud/Infrastructure Providers*, *Selected Clusters/Deployment Roles*, *Selected Containers Providers*, *Tagged VMs and Instances*, *Tagged Images*, or *Tenants*.
+You can assign chargeback rates to *The Enterprise*, *Selected Cloud/Infrastructure Providers*, *Selected Clusters/Deployment Roles*, *Selected Containers Providers*, *Tagged VMs and Instances*, *Tagged Images*, *Labeled Images*, or *Tenants*.
 
 . From the *Basic Info* area, use the *Assign To* list to select a type of assignee to assign the rate set to.
 . For *Tagged VMs and Instances* and *Tagged Images* select a *Tag Category*.
