Update installation guide with reviewer comments

--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -32,7 +32,7 @@ endif::cfme[]
 [[uploading-the-appliance-on-amazon-ec2]]
 === Uploading the Appliance to an Amazon S3 Bucket
 
-Uploading the {product-title} appliance file onto Amazon EC2's systems has the following requirements:
+Uploading the {product-title} appliance file onto Amazon EC2 has the following requirements:
 
 * 44 GB of space on the chosen datastore.
 * 8 GB RAM.
