removed unwanted changes from doc

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -111,7 +111,7 @@ notification_driver=messaging
 notification_topics=notifications
 ------
 +
-. Restart the Compute service and Orchestration services:
+. Restart the Compute service and Orchestration services:cd attcd ..
 +
 ------
 # systemctl restart openstack-heat-api.service \
