Add Register Node in OpenStack Environment doc

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -121,6 +121,20 @@ notification_topics=notifications
 # systemctl restart openstack-nova-compute.service
 ------
 
+[[Registering_Nodes_Openstack_Environment]]
+
+== Registering Nodes in the OpenStack Environment
+
+After adding your OpenStack provider, you can add bare metal git conodes to grow your environment. Use a node definition template (JSON format file) containing hardware and power management details for your nodes to build your Overcloud.
+
+. Navigate to menu:Compute[Infrastructure > Providers].
+. Click on your *OpenStack* provider.
+. Click image:1847.png[]  *Configuration* and select *Register Nodes*.
+. Click *Choose File* and select the node definition template from the appropriate directory.
+. Click *Register*.
+
+
+NOTE: For more information, see https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux_OpenStack_Platform/7/html-single/Director_Installation_and_Usage/#sect-Compute_Node_Requirements[Registering Nodes for the Basic Overcloud] in the Red Hat OpenStack Platform _Director Installation and Usage_ guide.
 
 
 
