--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_assign_chargeback_rates.adoc
@@ -2,7 +2,12 @@
 
 === Assigning Chargeback Rates
 
-{product-title} allows you to assign chargeback rates by choosing from *Compute* and *Storage*.
+{product-title} allows you to assign chargeback rates by choosing from *Compute* and *Storage*. You can assign either a custom chargeback rate, or a default rate for Compute, Storage, or Container Images.
+
+[NOTE]
+====
+The *Default Container Image Rate* can be useful when applied to a containers provider with multiple images, where only some of the images have a chargeback rate assigned; the images without a custom rate will then use the default rate.
+====
 
 . Navigate to menu:Cloud Intel[Chargeback].
 . Click the *Assignments* accordion, and click either *Compute* or *Storage*.
@@ -16,7 +21,6 @@ You can assign chargeback rates to *The Enterprise*, *Selected Cloud/Infrastruct
 . For *Tagged VMs and Instances* and *Tagged Images* select a *Tag Category*.
 . For each item to set, select the chargeback rate to use. The options displayed vary based on the type you select.
 . Click *Save*.
-
 
 
 ==== Configuring Chargeback for Storage
