--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_open_a_chart_or_report_widget_in_its_own_window.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_open_a_chart_or_report_widget_in_its_own_window.adoc
@@ -2,7 +2,7 @@
 === Opening a Chart or Report Widget in Full Screen View
 
 . Navigate to menu:Cloud Intelligence[Dashboard].
-. From the chart or report widget that you want to enlarge, click  image:fullScreenView.png[] *(Full Screen view)* in the upper right corner of the widget. 
+. From the chart or report widget that you want to enlarge, click  image:fullScreenIcon.png[] *(Full Screen view)* in the upper right corner of the widget. 
 . Click *OK*.
 
 
