--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -14,7 +14,7 @@ ifdef::miq[]
 
 . In a browser, navigate to link:manageiq.org/download[].
 . Select *Amazon* from the *--Choose your platform--* list.
-. Select *Stable (euwe-2)* from the *--Choose a release--* list.
+. Select *Stable (euwe-2)* from the *--Choose a release-git add-* list.
 . Follow the instructions to download the appliance.
 endif::miq[]
 
@@ -32,7 +32,7 @@ endif::cfme[]
 [[uploading-the-appliance-on-amazon-ec2]]
 === Uploading the Appliance to an Amazon S3 Bucket
 
-Uploading the {product-title} appliance file onto Amazon EC2's systems has the following requirements:
+Uploading the {product-title} appliance file onto Amazon EC2 has the following requirements:
 
 * 44 GB of space on the chosen datastore.
 * 8 GB RAM.
@@ -71,13 +71,13 @@ To import the appliance:
 . Use AWS-CLI tools to import the image. Run the following command:
 +
 ----
-aws ec2 import-image --disk-containers file://containers.json --region BUCKET_REGION
+$ aws ec2 import-image --disk-containers file://containers.json --region BUCKET_REGION
 ----
 +
 . Check the progress of your imported image by running the following command:
 +
 ----
-aws ec2 describe-import-image-tasks --region BUCKET_REGION --import-task-ids import-ami-AMI_ID_GOT_FROM_REPONSE
+ $ aws ec2 describe-import-image-tasks --region BUCKET_REGION --import-task-ids import-ami-AMI_ID_GOT_FROM_RESPONSE
 ----
 +
 
