edited Editing a Chargeback rate typo in procedure

--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_chargeback_rates.adoc
@@ -13,7 +13,7 @@ There are three methods to create a chargeback rate: editing or copying an exist
 . Click the *Rates* accordion and select an existing rate from under *Compute* or *Storage*. 
 . Click image:1847.png[] *(Configuration)* and  image:1851.png[] *(Edit this Chargeback Rate)*. 
 . Edit the rate as desired.
-. Click *Add* at the bottom of the screen to save the chargeback rate.
+. Click *Save* at the bottom of the screen to save the chargeback rate.
     
     
 ==== Copying a Chargeback Rate
