--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -125,10 +125,10 @@ notification_topics=notifications
 
 == Registering Nodes in the OpenStack Environment
 
-After adding your OpenStack provider, you can add nodes to grow your environment. Use a node definition template (JSON format file) containing hardware and power management details for your nodes to build your Overcloud.
+After adding your OpenStack provider, you can add nodes to grow your environment. Use a node definition template (JSON format file) containing hardware and power management details for your nodes to build your overcloud.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
-. Click on your *OpenStack* provider.
+. Click on your OpenStack provider.
 . Click image:1847.png[]  *Configuration* and select *Register Nodes*.
 . Click *Choose File* and select the node definition template from the appropriate directory.
 . Click *Register*.
