--- a/doc-Managing_Providers/topics/Middleware_Providers.adoc
+++ b/doc-Managing_Providers/topics/Middleware_Providers.adoc
@@ -6,19 +6,19 @@ In {product-title}, a middleware provider is a middleware management environment
 [[middleware-management]]
 == Middleware Management
 
-The middleware provider extends {product-title} management capabilities to JBoss Middleware application containers running in managed virtual machines, hosts, and Linux containers. The provider delivers inventory, events, metrics, and power operations. Middleware management in {product-title} is a provider based on the Hawkular open source project.  When feature complete, the Middleware Management provider will replace the current Red Hat middleware management offering, JBoss Operations Network.
+The middleware provider extends {product-title} management capabilities to JBoss Middleware application containers running in managed virtual machines, hosts, and Linux containers. The provider delivers inventory, events, metrics, and power operations. Middleware management in {product-title} is a provider based on the Hawkular open source project.  When feature complete, the middleware management provider will replace the current Red Hat middleware management offering, JBoss Operations Network.
 
 ifdef::cfme[]
 [NOTE]
 ====
-Middleware Management providers are available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
+middleware management providers are available as a technology preview in this release of {product-title}. For more information on the support scope for features marked as technology previews, see link:https://access.redhat.com/support/offerings/techpreview/[Technology Preview Features Support Scope].
 ====
 endif::cfme[]
 
 [[adding_a_middleware_provider]]
 === Adding Middleware Management Providers
 
-.To add a Middleware Management provider:
+.To add a middleware management provider:
 
 . Navigate to menu:Middleware[Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Middleware Provider*).
@@ -39,6 +39,7 @@ endif::cfme[]
 +
 . Before you add the provider, click the *Validate* button to confirm that the user has the proper credentials.
 . Click *Add*.
+. Click  image:1847.png[] (*Configuration*), then click  image:2003.png[] (*Refresh Items and Relationships*).
 
 {product-title} displays the Summary screen.
 
