Minor grammar fix.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2833,7 +2833,7 @@ image:add-subscription.png[Add Subscription]
 
 [NOTE]
 ====
-Central administration can only be enabled after the initial data sync is complete. So you must save the subscription before this can be done.
+Central administration can only be enabled after the initial data sync is complete. You must save the subscription before this can be done.
 ====
 
 [[enabling-disabling-central-admin]]
