info about aws public filters

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1247,6 +1247,7 @@ Table: ems_refresh
 |get_private_images|For EC2 refreshes only; whether or not to retrieve private images. Default: true
 |get_public_images|For EC2 refreshes only; whether or not to retrieve public images. Default: false. Warning: setting get_public_images to true loads several thousand images in the VMDB by default and may cause performance issues.
 |get_shared_images|For EC2 refreshes only; whether or not to retrieve shared images. Default: true
+|public_images_filters|For EC2 refreshes only; A filter to reduce the number of public images. Default: all public images
 |ignore_terminated_instances|For EC2 refreshes only; whether or not to ignore terminated instances. Default: true
 |full_refresh_threshold|The number of targeted refreshes requested before they are rolled into a full refresh. For example, if the system and/or the user target a refresh against 7 VMs and 2 Hosts (9 targets), when the refresh actually occurs it will do a partial refresh against those 9 targets only. However, if a 10th had been added, the system would perform a full EMS refresh instead. Default: 100
 |raise_vm_snapshot_complete_if_created_within:|Raises vm_snapshot_complete event for a snapshot being added to VMDB only if the create time in Virtual Center is within the configured period of time. This prevents raising events for old snapshots when a new VC is added to {product-title}. Default: 15.minutes
