--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2707,7 +2707,7 @@ To view information on the VMDB:
 [[database-regions-and-replication]]
 ==== Database Regions and Replication
 
-Regions are used to create a central database for reporting and charting. Do not use the database at the top level for operational tasks such as SmartState Analysis or Capacity and Utilization data collection. Assign each server participating in the region a unique number during the regionalization process, then set your subordinate regions to replicate to the top region.
+Regions are used to create a central database for reporting and charting. Do not use the database at the top level for operational tasks such as SmartState analysis or capacity and utilization data collection. Assign each server participating in the region a unique number during the regionalization process, then set your subordinate regions to replicate to the top region.
 
 [IMPORTANT]
 ======
@@ -2804,43 +2804,6 @@ You can reset the replication relationship between the global copy and remote co
 .. Enter the password of the database user in the *Password* field.
 .. Enter the port by which the database is accessed in the *Port* field.
 . Click *Save*.
-
-//////////////////////////////////////////////
-
-[[running-a-single-backup]]
-===== Running a Single Backup
-
-To run a single backup:
-
-. Navigate to menu:Settings[Configuration].
-. Click on the *Diagnostics* accordion, then click Region name.
-. Click the *Database* tab.
-. If you have created a backup schedule, and want to use the same depot settings, select it under *Backup Schedules*.
-. If you do not want to use the settings from a backup schedule, or need to create settings, go into the *Database Backup Settings* area.
-. Select a type of server to put the backups. You can either use *Network File System* or *Samba*.
-+
-image:2099.png[]
-+
-* If selecting *Samba*, enter the *Depot Name*, *URI*, *User ID*, a *Password*, and a valid *Password*. Click *Validate* to check the settings.
-* If you choose *Network File System*, enter the *Depot Name* and *URI*.
-. Click *Submit*.
-
-The database backup is run immediately. You can see the task by navigating to menu:Settings[Tasks], then clicking on the *All Other Tasks* tab.
-
-[[restoring-a-database-from-backup]]
-===== Restoring a Database from Backup
-
-To restore a database from backup:
-
-. Copy the database backup file to `/tmp`, and name it `evm_db.backup`. The server looks specifically for this file to restore from.
-. Log in to the appliance console with a user name of `admin` and the default password. The {product-title} appliance summary screen displays.
-. Press `Enter` to manually configure settings.
-. Press the number `6` to select *Restore Database From Backup*.
-. Press `Y` to confirm.
-
-If directed by Red Hat, you can run database garbage collection to reclaim unused space in your VMDB. Generally, the database server does this automatically.
-
-//////////////////////////////////////////////
 
 [[backing-up-and-restoring-a-database]]
 ==== Backing Up and Restoring a Database
@@ -3036,6 +2999,5 @@ If you change the password on the remote database, you will need to change the p
 service evmserverd restart
 ------
 +
-
 
 
