Added a note about the deprecation of rubyrep (database_synchronization role) replication.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2713,6 +2713,11 @@ Regions are used to create a central database for reporting and charting. Do not
 All {product-title} databases in a multi-region deployment must use the same security key.
 ======
 
+[NOTE]
+====
+The use of rubyrep replication has been deprecated in this release of {product-title}; therefore, the database_synchronization role and replication worker are no longer used when using pglogical replication. 
+====
+
 [[creating_a_region]]
 ===== Creating a Region
 
