WIP: Appendix for the appliance_console_cli command

--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -32,3 +32,7 @@ include::common/initial-login.adoc[]
 
 include::common/initial-login-changepw.adoc[]
 
+[[Appendix]]
+include::common/appe-appliance-console-cli.adoc[]
+
+
