--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -707,7 +707,6 @@ These roles are enabled by default on all servers.
 * The Capacity & Utilization Data Collector performs the actual collection of capacity and utilization data. This role has a dedicated worker, and there can be more than one {product-title} server with this role in a zone.
 * The Capacity & Utilization Data Processor processes all of the data collected, allowing {product-title} to create charts. This role has a dedicated worker, and there can be more than one {product-title} server with this role in a zone.
 |Database Operations|Use Database Operations to enable this {product-title} server to run database backups or garbage collection.
-|Database Synchronization|Use Database Synchronization to enable this {product-title} server's VMDB to replicate to a higher-level VMDB. This should only be enabled after creating settings for the Replication Worker.
 |Event Monitor|This role is enabled by default and provides the information shown in timelines. Event Monitor is responsible for the work between the {product-title} server and your providers. It starts 2 workers for each provider. One worker, the monitor, is responsible for maintaining a connection to a provider, catching events, and putting them on the {product-title} message queue for processing. The second worker, the handler, is a message queue worker responsible for delivering only those messages for a provider. You should have at least one of these in each zone.
 |Notifier|Use this role if you will be using {product-title} Control or Automate to forward SNMP traps to a monitoring system or send e-mails. See <<Configuring SNMP>> for details on creating SNMP alerts. If more than one {product-title} server in a specific zone has this role, only one will be active at a time.
 |Provider Inventory|This role is enabled by default. This role is responsible for refreshing provider information including EMS, hosts, virtual machines, and clusters, and is also responsible for capturing datastore file lists. If more than one {product-title} server in a specific zone has this role, only one will be active at a time.
@@ -2759,7 +2758,7 @@ The region number must be unique on each {product-title} instance where replicat
 [[configuring-a-remote-copy]]
 ===== Configuring a Remote Copy
 
-Configure a {product-title} instance to act as a remote copy where data from the global copy will be replicated. This procedure must only be performed on instances where the *Database Synchronization* role will be enabled. This procedure must be performed before enabling that role.
+Configure a {product-title} instance to act as a remote copy from which data will be replicated to the global copy.
 
 . Navigate to menu:Settings[Configuration].
 . Click the *Settings* accordion. 
@@ -2771,7 +2770,7 @@ Configure a {product-title} instance to act as a remote copy where data from the
 [[configuring-the-global-copy]]
 ===== Configuring the Global Copy
 
-Configure a {product-title} instance to act as the global copy from which data is replicated to remote copies. This procedure must only be performed on servers where the *Database Synchronization* role will be enabled. These settings must be completed before enabling that role.
+Configure a {product-title} instance to act as the global copy to which data is replicated from the remote copies.
 
 . Navigate to menu:Settings[Configuration].
 . Click the *Settings* accordion.
