added new section on Amazon EC2 permissions

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -28,6 +28,9 @@ include::Discovering_Azure_Providers.adoc[]
 
 
 :leveloffset: 3
+include::Amazon_EC2_Providers_Permissions.adoc[]
+
+:leveloffset: 3
 include::Adding_Amazon_EC2_Providers.adoc[]
 
 
