updated Amazon services names according to AWS site

--- a/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
+++ b/doc-Managing_Providers/topics/Amazon_EC2_Providers_Permissions.adoc
@@ -12,12 +12,12 @@ application functionality.
 
 The AWS services primarily accessed by {product-title} API include:
 
-* EC2
+* Elastic Compute Cloud (EC2)
 * CloudFormation
 * CloudWatch
-* ElasticLoadBalancing
-* SNS
-* SQS
+* Elastic Load Balancing
+* Simple Notification Service (SNS)
+* Simple Queue Service (SQS)
 
 
 
