--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -26,6 +26,8 @@ include::Discovering_Azure_Providers.adoc[]
 :leveloffset: 2
 = Amazon EC2 Providers
 
+:leveloffset: 3
+include::Amazon_EC2_Providers_Permissions.adoc[]
 
 :leveloffset: 3
 include::Adding_Amazon_EC2_Providers.adoc[]
